@@ -3,6 +3,8 @@ git-annex (10.20240431) UNRELEASED; urgency=medium
   * git-remote-annex: New program which allows pushing a git repo to a
     git-annex special remote, and cloning from a special remote.
     (Based on Michael Hanke's git-remote-datalad-annex.)
+  * initremote, enableremote: Added --with-url to enable using
+    git-remote-annex.
   * fsck: Fix recent reversion that made it say it was checksumming files
     whose content is not present.
   * Avoid the --fast option preventing checksumming in some cases it
